<resources>

    <string name="API_KEY_TEST">53873c6fc26c2abac786d7822d2e1a93</string>

    <string name="tkey">2MQDIYTCQ99F</string>

    <string name="app_name">Giffer</string>

    <string name="setting">Setting</string>
    <string name="send">Share App</string>
    <string name="about">About</string>

    <string name="nav_favourites">My Favourites</string>
    <string name="nav_tags">Tags</string>
    <string name="wallpaper">HD Wallpaper</string>
    <string name="gif">GIF </string>

    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>

    //Tabs name
    <string name="emotions">Emotions</string>
    <string name="memes">Memes</string>
    <string name="reactions">Reactions</string>
    <string name="recent">Recent</string>
    <string name="trending">Trending</string>

    <string name="banner_ad_unit_id">ca-app-pub-4350473558500023/2995843997</string>

    <string name="uns_client_id">70eb683523ff2e63e56b98d80c623b663db5dc15f8da25d4de1ac7eee25b74dd</string>

    <string name="title_gif_search">Search Result for </string>

</resources>
