<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_wallpaper"
            android:title="@string/wallpaper"
            android:checked="true"
            android:icon="@drawable/ic_wallpaper_black_24dp"/>

        <item
            android:id="@+id/nav_gif"
            android:title="@string/gif"
            android:icon="@drawable/ic_gif_black_24dp"/>

        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_beenhere_black_24dp"
            android:title="@string/nav_favourites"/>

        <item
            android:id="@+id/nav_tags"
            android:icon="@drawable/ic_filter_list_black_24dp"
            android:title="@string/nav_tags"/>

    </group>

    <item android:title="Communicate">

        <menu>

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/about"/>

            <item
                android:id="@+id/nav_setting"
                android:title="@string/setting"
                android:icon="@drawable/ic_phonelink_setup_black_24dp"/>

            <item
                android:enabled="true"
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/send" />

        </menu>

    </item>

</menu>
